<resources>
    <string name="app_name">PetiVerse</string>
    <string name="headerText_mypets">My Pets</string>
    <string name="petName1">Loki</string>
    <string name="age_text">Age</string>
    <string name="type_text">Type</string>
    <string name="Age_display">3 Years</string>
    <string name="type_display">Dog</string>
    <string name="petName2">Misty</string>
    <string name="Age_display2">2 Years</string>
    <string name="type_display2">Cat</string>
    <string name="addButton" />
    <string name="RoundbuttonText">+</string>
    <string name="home">Home</string>
    <string name="Vaccines">Vaccines</string>
    <string name="Settings">Settings</string>
    <string name="page3">Page 3</string>
    <string name="page2">Page 2</string>
    <string name="addpetBack">Add Pet</string>
    <string name="backButton">Back</string>
    <string name="petType">Dog</string>
    <string name="petName">Loki</string>
    <string name="petBirthday">July 10 2024</string>
    <string name="petSex">Male</string>
    <string name="petBreed">Labrador</string>
    <string name="typeInput">Pet type</string>
    <string name="nameInput">Name</string>
    <string name="ageInput">Birthday</string>
    <string name="sexInput">Sex</string>
    <string name="breedInput">Breed</string>
    <string name="AddpetButton">Add</string>
    <string name="DrugFor">Drug for</string>
    <string name="vaccinatedDate">Vaccinated date</string>
    <string name="drugForInput">Rabies</string>
    <string name="drugInput">Nobiva Rabies</string>
    <string name="drugName">Drug name</string>
    <string name="vaccineDateInput">10 August 2024</string>
    <string name="addVaccineButton">Save</string>
    <string name="AddVaccineBack">Add Vaccine</string>
    <string name="PetInfoBack">Loki</string>
    <string name="Vaccinations">Vaccinations</string>
    <string name="RecentVaccines">Recent</string>
    <string name="VDate">Date</string>
    <string name="userName">Ishara Madusanka</string>
    <string name="userEmail">hpimadusanka@gmail.com</string>
    <string name="district">Matara</string>
    <string name="petCount">District</string>
    <string name="petCounter">Colombo</string>
    <string name="usernameInput">User name</string>
    <string name="emailInput">Email</string>
    <string name="districtInput">District</string>
    <string name="updateButtonText">Update</string>
    <string name="ProfileHeaderText">Profile</string>
    <string name="LaunchingScreenName">PetiVerse App</string>
    <string name="homeBtn">Home</string>
    <string name="vaccineBtn">Vaccines</string>
    <string name="profileBtn">Profile</string>

</resources>